--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,7 +24,16 @@ dependencies {
     compile 'com.jakewharton:butterknife:8.6.0'
     provided 'com.jakewharton:butterknife-compiler:8.6.0'
     compile 'com.github.MatteoBattilana:WeatherView:1.2.0'
-    compile 'com.android.support:appcompat-v7:25.1.0'
     compile project(':viewpagerindicator_library')
-    compile 'me.zhouzhuo.zzweatherview:zz-weather-view:1.0.2'
+    //    compile 'me.zhouzhuo.zzweatherview:zz-weather-view:1.0.2'
+    compile 'com.google.dagger:dagger:2.11'
+    compile 'com.android.support:appcompat-v7:24'
+    compile 'com.android.support:appcompat-v7:24.1.1'
+    compile 'com.android.support:recyclerview-v7:24.1.1'
+    compile 'com.squareup.retrofit2:retrofit:2.3.0'
+    compile 'com.squareup.retrofit2:retrofit-converters:2.3.0'
+    compile 'com.squareup.okhttp3:okhttp:3.8.1'
+    compile 'com.jakewharton.timber:timber:4.5.1'
+    compile 'com.orhanobut:logger:2.1.1'
+    compile 'com.google.code.gson:gson:2.8.1'
 }
