get server json data and parse json data for java data 	new file:   .gitignore 	modified:   .idea/misc.xml 	new file:   .idea/vcs.xml 	modified:   README.md 	new file:   SimpleWeather.iml 	modified:   app/build.gradle 	modified:   app/src/main/AndroidManifest.xml 	modified:   app/src/main/java/com/hawksjamesf/simpleweather/HomeActivity.java 	modified:   app/src/main/java/com/hawksjamesf/simpleweather/HomeFragment.java 	new file:   app/src/main/java/com/hawksjamesf/simpleweather/HomeService.java 	deleted:    app/src/main/java/com/hawksjamesf/simpleweather/WeatherData.java 	new file:   app/src/main/java/com/hawksjamesf/simpleweather/bean/DailyBean.java 	renamed:    app/src/main/java/com/hawksjamesf/simpleweather/SkyconBean.java -> app/src/main/java/com/hawksjamesf/simpleweather/bean/SkyconBean.java 	renamed:    app/src/main/java/com/hawksjamesf/simpleweather/TemperatureBean.java -> app/src/main/java/com/hawksjamesf/simpleweather/bean/TempeBean.java 	modified:   app/src/main/res/layout/fragment_home.xml 	modified:   app/src/main/res/layout/item_weather.xml 	new file:   viewpagerindicator_library/viewpagerindicator_library.iml

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,11 +1,11 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 24
+    compileSdkVersion 23
     buildToolsVersion "25.0.2"
     defaultConfig {
         applicationId "com.hawksjamesf.simpleweather"
-        minSdkVersion 24
+        minSdkVersion 17
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
@@ -16,6 +16,10 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+    dexOptions {
+    }
+    productFlavors {
     }
 }
 
@@ -36,4 +40,5 @@ dependencies {
     compile 'com.jakewharton.timber:timber:4.5.1'
     compile 'com.orhanobut:logger:2.1.1'
     compile 'com.google.code.gson:gson:2.8.1'
+
 }
