finish fifteen days chart 	new file:   .idea/codeStyleSettings.xml 	modified:   .idea/misc.xml 	modified:   .idea/vcs.xml 	modified:   app/build.gradle 	modified:   app/src/main/java/com/hawksjamesf/simpleweather/FifteenDaysAdapter.java 	modified:   app/src/main/java/com/hawksjamesf/simpleweather/FifteenDaysView.java 	modified:   app/src/main/java/com/hawksjamesf/simpleweather/HomeActivity.java 	modified:   app/src/main/java/com/hawksjamesf/simpleweather/HomeFragment.java 	modified:   app/src/main/java/com/hawksjamesf/simpleweather/RefreshAdapter.java 	modified:   app/src/main/java/com/hawksjamesf/simpleweather/RefreshListView.java 	new file:   app/src/main/java/com/hawksjamesf/simpleweather/WebApiInterface.java 	deleted:    app/src/main/java/com/hawksjamesf/simpleweather/bean/DailyBean.java 	new file:   app/src/main/java/com/hawksjamesf/simpleweather/bean/RealTimeBean.java 	new file:   app/src/main/java/com/hawksjamesf/simpleweather/bean/fifteendaysbean/FifteenBean.java 	renamed:    app/src/main/java/com/hawksjamesf/simpleweather/bean/SkyconBean.java -> app/src/main/java/com/hawksjamesf/simpleweather/bean/fifteendaysbean/SkyConBean.java 	renamed:    app/src/main/java/com/hawksjamesf/simpleweather/bean/TempeBean.java -> app/src/main/java/com/hawksjamesf/simpleweather/bean/fifteendaysbean/TempeBean.java 	new file:   app/src/main/java/com/hawksjamesf/simpleweather/bean/fifteendaysbean/TestBean.java 	modified:   app/src/main/java/com/hawksjamesf/simpleweather/util/ConditionUtils.java 	modified:   app/src/main/res/layout/item_fifteen_days_chart.xml 	modified:   app/src/main/res/layout/item_weather.xml 	modified:   app/src/main/res/values/strings.xml 	modified:   viewpagerindicator_library/build.gradle 	modified:   viewpagerindicator_library/viewpagerindicator_library.iml

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "25.0.2"
+    buildToolsVersion "26.0.0"
     defaultConfig {
         applicationId "com.hawksjamesf.simpleweather"
         minSdkVersion 17
@@ -40,5 +40,6 @@ dependencies {
     compile 'com.jakewharton.timber:timber:4.5.1'
     compile 'com.orhanobut:logger:2.1.1'
     compile 'com.google.code.gson:gson:2.8.1'
-
+    compile 'org.greenrobot:eventbus:3.0.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.3.0'
 }
