--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.hawksjamesf.simpleweather" >
-    <uses-permission android:name="android.permission.INTERNET" />
+          package="com.hawksjamesf.simpleweather">
+
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:name=".SimpleWeatherApplication"
@@ -9,17 +10,26 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme" >
-        <activity android:name=".HomeActivity" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+        android:theme="@style/AppTheme">
+        <activity android:name=".ui.HomeActivity"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
+        <service android:name=".HomeService">
+        </service>
+
+        <activity
+            android:name=".ui.SplashAcvitivy"
+            android:label="@string/title_activity_splash_acvitivy"
+            android:theme="@style/AppTheme">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <service android:name=".HomeService">
-
-        </service>
+        <activity
+            android:name=".ui.SetupWizardActivity"
+            android:label="@string/title_activity_setup_wizard"
+            android:theme="@style/AppTheme"/>
     </application>
 
 </manifest>
