--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/AppTheme">
         <activity android:name=".ui.HomeActivity"/>
 
-        <service android:name=".HomeService">
+        <service android:name=".ui.HomeService">
         </service>
 
         <activity
