--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,15 +5,20 @@ android {
         config {
         }
     }
-    compileSdkVersion 23
-    buildToolsVersion '25.0.2'
+    compileSdkVersion 24
+    buildToolsVersion '26.0.0'
     defaultConfig {
         applicationId "com.hawksjamesf.simpleweather"
         minSdkVersion 17
-        targetSdkVersion 25
+        targetSdkVersion 26
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        ndk {
+            // 设置支持的SO库架构
+            abiFilters 'x86_64' //, 'x86', 'armeabi-v7a', 'x86_64', 'arm64-v8a'
+            abiFilters 'x86' //, 'x86', 'armeabi-v7a', 'x86_64', 'arm64-v8a'
+        }
     }
     buildTypes {
         release {
@@ -51,7 +56,9 @@ dependencies {
     compile 'com.orhanobut:logger:2.1.1'
     compile 'com.google.code.gson:gson:2.8.1'
     compile 'org.greenrobot:eventbus:3.0.0'
-    compile 'com.android.support.constraint:constraint-layout:1.0.0-beta4'
     compile 'com.android.support:design:23.4.0'
+    compile 'io.reactivex.rxjava2:rxjava:2.1.3'
+    compile 'com.tencent.bugly:crashreport:latest.release'
+    compile 'com.tencent.bugly:nativecrashreport:latest.release'
 }
 
