--- a/build.gradle
+++ b/build.gradle
@@ -3,14 +3,15 @@
 buildscript {
     repositories {
         jcenter()
+//        google()
 
 
 
         }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.3'
+        classpath 'com.android.tools.build:gradle:1.5.0'
         classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
-
+//
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -20,6 +21,7 @@ allprojects {
     repositories {
         jcenter()
         maven { url = 'https://jitpack.io' }
+//        google()
     }
 }
 
