--- a/viewpagerindicator_library/build.gradle
+++ b/viewpagerindicator_library/build.gradle
@@ -2,9 +2,10 @@ apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 17
-    buildToolsVersion '26.0.0'
+    buildToolsVersion '27.0.0'
 
     defaultConfig {
+//        multiDexEnabled=true
         minSdkVersion 4
         targetSdkVersion 25
     }
