--- a/build.gradle
+++ b/build.gradle
@@ -3,14 +3,13 @@
 buildscript {
     repositories {
         jcenter()
-//        google()
+        google()
 
 
 
         }
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.5.0'
-        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
+        classpath 'com.android.tools.build:gradle:3.0.1'
 //
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -20,8 +19,7 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
-        maven { url = 'https://jitpack.io' }
-//        google()
+        google()
     }
 }
 
