--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,12 @@ android:
     - platform-tools
     - build-tools-27.0.0
     - android-23
+    - android-26
+    - android-17
     - extra-android-m2repository
     - extra-google-m2repository
 jdk:
   - oraclejdk8
 script:
   - ./gradlew assemble
+
