--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,67 +1,78 @@
 apply plugin: 'com.android.application'
-apply plugin: 'com.neenbedankt.android-apt'
 android {
-    signingConfigs {
-        config {
-        }
-    }
-    compileSdkVersion 23
+    compileSdkVersion 26
     buildToolsVersion '27.0.0'
     defaultConfig {
-//        multiDexEnabled=true
+        multiDexEnabled = true
         applicationId "com.hawksjamesf.simpleweather"
         minSdkVersion 17
         targetSdkVersion 26
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "2.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-//        ndk {
-            // 设置支持的SO库架构
-//            abiFilters 'x86_64'
-//            abiFilters 'x86'
-//            abiFilters 'armeabi-v7a'
-//            abiFilters 'arm64-v8a'
-//        }
+        ndk {
+//             设置支持的SO库架构
+            abiFilters 'x86_64'
+            abiFilters 'x86'
+            abiFilters 'armeabi-v7a'
+            abiFilters 'arm64-v8a'
+        }
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            buildConfigField("String", "BASE_URL", '"https://weatherapi.market.xiaomi.com"')
         }
-        debug{
-            buildConfigField ("String","BASE_URL",'"https://api.caiyunapp.com/"')
+        debug {
+//            buildConfigField ("String","BASE_URL",'"https://api.caiyunapp.com/"')
+            buildConfigField("String", "BASE_URL", '"https://weatherapi.market.xiaomi.com"')
         }
+    }
+    lintOptions {
+//        abortOnError false
     }
 
     productFlavors {
+
     }
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile project(':viewpagerindicator_library')
-    compile 'com.jakewharton:butterknife:8.6.0'
-//    annotationProcessor 'com.jakewharton:butterknife-compiler:8.6.0'
-    provided 'com.jakewharton:butterknife-compiler:8.6.0'
-    compile 'com.github.MatteoBattilana:WeatherView:1.2.0'
-    compile 'com.google.dagger:dagger:2.11'
-    provided 'com.google.dagger:dagger-compiler:2.11'
-    //    compile 'com.google.dagger:dagger-android:2.11'
-    //    compile 'com.google.dagger:dagger-android-support:2.11'// if you use the support libraries
-    //    provided 'com.google.dagger:dagger-android-processor:2.11'
-    compile 'com.android.support:appcompat-v7:24.1.1'
-    compile 'com.android.support:recyclerview-v7:24.1.1'
-    compile 'com.squareup.retrofit2:retrofit:2.3.0'
-    compile 'com.squareup.retrofit2:retrofit-converters:2.3.0'
-    compile 'com.squareup.retrofit2:converter-gson:2.3.0'
-    compile 'com.squareup.okhttp3:okhttp:3.8.1'
-    //    compile 'com.jakewharton.timber:timber:4.5.1'
-    compile 'com.orhanobut:logger:2.1.1'
-    compile 'com.google.code.gson:gson:2.8.1'
-    compile 'org.greenrobot:eventbus:3.0.0'
-    compile 'com.android.support:design:23.4.0'
-    compile 'io.reactivex.rxjava2:rxjava:2.1.3'
-    compile 'com.tencent.bugly:crashreport:latest.release'
-    compile 'com.tencent.bugly:nativecrashreport:latest.release'
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+//    implementation project(':viewpagerindicator_library')
+    implementation 'com.jakewharton:butterknife:8.8.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+    implementation 'com.google.dagger:dagger:2.11'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.11'
+
+    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+    implementation 'com.squareup.retrofit2:retrofit-converters:2.3.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.+'
+    implementation 'com.squareup.okhttp3:okhttp:3.8.1'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.4.1'
+//    implementation 'com.jakewharton.timber:timber:4.5.1'
+    implementation 'com.orhanobut:logger:2.1.1'
+    implementation 'com.google.code.gson:gson:2.8.2'
+    implementation 'org.greenrobot:eventbus:3.0.0'
+    implementation 'io.reactivex.rxjava2:rxjava:2.+'
+    implementation 'com.tencent.bugly:crashreport:2.6.6.1'
+    implementation 'com.tencent.bugly:nativecrashreport:3.3.1'
+
+    // Test helpers for Room
+    testImplementation "android.arch.persistence.room:testing:1.0.0"
+    // Room (use 1.1.0-alpha1 for latest alpha)
+    implementation "android.arch.persistence.room:runtime:1.0.0"
+    annotationProcessor "android.arch.persistence.room:compiler:1.0.0"
+    // RxJava support for Room
+    implementation "android.arch.persistence.room:rxjava2:1.+"
+//    implementation "com.android.support:multidex:1.0.1"
+
+    //noinspection GradleCompatible
+    implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'com.android.support:design:26.1.0'
+    implementation 'com.android.support:recyclerview-v7:26.1.0'
+
 }
 
