添加location aar库和组件化

--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,6 @@ app/src/.DS_Store
 app/src/main/.DS_Store
 /viewpagerindicator_library/
 /viewpagerindicator_library/viewpagerindicator_library.iml
+.idea
+*.iml
+viewpagerindicator_library
