--- a/location/src/component/AndroidManifest.xml
+++ b/location/src/component/AndroidManifest.xml
@@ -1,14 +1,17 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.hawksjamesf.location">
 
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
-
     <application>
 
         <activity
             android:name=".StarterActivity"
             android:label="@string/title_activity_starter"
             android:theme="@style/AppTheme.NoActionBar">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
         </activity>
     </application>
 </manifest>
