--- a/mockserver/build.gradle
+++ b/mockserver/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.library'
+apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion rootProject.ext.compileSdkVersion
@@ -40,4 +41,10 @@ dependencies {
 //    implementation 'com.squareup.okhttp3:okhttp:3.8.1'
     implementation "com.squareup.okhttp3:logging-interceptor:${rootProject.ext.okhttpLoggingVersion}"
     implementation "com.squareup.okhttp3:mockwebserver:${rootProject.ext.okhttpVersion}"
+    compile 'com.blankj:utilcode:1.11.1'
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'com.orhanobut:logger:2.1.1'
+}
+repositories {
+    mavenCentral()
 }
