--- a/mockserver/src/main/AndroidManifest.xml
+++ b/mockserver/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
           package="com.hawksjamesf.mockserver">
 
     <application>
-        <service android:name=".MockService"/>
+        <service android:name=".MockService"
+            android:process=":mock_service"/>
     </application>
 </manifest>
