MockService可以处理多个请求

--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,4 @@ app/src/main/.DS_Store
 /viewpagerindicator_library/viewpagerindicator_library.iml
 .idea
 viewpagerindicator_library
+mockserver/src/main/.DS_Store
