--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ buildscript {
         jcenter()
         google()
 
-        }
+    }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
@@ -27,30 +27,32 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
-ext{
-    compileSdkVersion=26
-    buildToolsVersion ='27.0.0'
-    minSdkVersion =17
-    targetSdkVersion =26
-    versionCode=2
-    versionName="2.0"
+ext {
+    compileSdkVersion = 26
+    buildToolsVersion = '27.0.0'
+    minSdkVersion = 17
+    targetSdkVersion = 26
+    versionCode = 2
+    versionName = "2.0"
 
     // App dependencies
     supportLibraryVersion = '27.0.2'
     rxjavaVersion = '1.1.7'
-    rxandroidVersion='2.1.0'
-    junitVersion='4.12'
-    glideVersion='3.7.0'
-    retrofitVersion='2.3.0'
+    rxandroidVersion = '2.1.0'
+    junitVersion = '4.12'
+    glideVersion = '3.7.0'
+    retrofitVersion = '2.3.0'
 //    retrofitVersion='2.4.0'
-    okhttpVersion='3.11.0'
+    okhttpVersion = '3.11.0'
 //    okhttpMockVersion='3.11.0'
-    okhttpLoggingVersion='3.4.1'
-    espressoVersion='3.0.1'
-    runnerVersion='1.0.0'
+    okhttpLoggingVersion = '3.4.1'
+    espressoVersion = '3.0.1'
+    runnerVersion = '1.0.0'
     mockitoVersion = '1.10.19'
     hamcrestVersion = '1.3'
     kotlin_version = '1.2.71'
+    loggerVersion = '2.1.1'
+    utilcodeVersion = '1.11.1'
 
 }
 println("root project end")
