--- a/mockserver/build.gradle
+++ b/mockserver/build.gradle
@@ -41,9 +41,9 @@ dependencies {
 //    implementation 'com.squareup.okhttp3:okhttp:3.8.1'
     implementation "com.squareup.okhttp3:logging-interceptor:${rootProject.ext.okhttpLoggingVersion}"
     implementation "com.squareup.okhttp3:mockwebserver:${rootProject.ext.okhttpVersion}"
-    compile 'com.blankj:utilcode:1.11.1'
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'com.orhanobut:logger:2.1.1'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "com.blankj:utilcode:${rootProject.ext.utilcodeVersion}"
+    implementation "com.orhanobut:logger:${rootProject.ext.loggerVersion}"
 }
 repositories {
     mavenCentral()
