--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,45 +47,11 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'com.jakewharton:butterknife:8.8.1'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
-    implementation 'com.google.dagger:dagger:2.11'
-    annotationProcessor 'com.google.dagger:dagger-compiler:2.11'
-    implementation "com.squareup.retrofit2:retrofit:${rootProject.ext.retrofitVersion}"
-    implementation "com.squareup.retrofit2:retrofit-converters:${rootProject.ext.retrofitVersion}"
-    implementation "com.squareup.retrofit2:converter-gson:${rootProject.ext.retrofitVersion}"
-    implementation "com.squareup.retrofit2:adapter-rxjava2:${rootProject.ext.retrofitVersion}"
-    implementation "com.squareup.retrofit2:retrofit-mock:${rootProject.ext.retrofitVersion}"
-//    implementation 'com.squareup.okhttp3:okhttp:3.8.1'
-    implementation "com.squareup.okhttp3:logging-interceptor:${rootProject.ext.okhttpLoggingVersion}"
-    implementation "com.squareup.okhttp3:mockwebserver:${rootProject.ext.okhttpVersion}"
-    //    implementation 'com.jakewharton.timber:timber:4.5.1'
-    implementation "com.blankj:utilcode:${rootProject.ext.utilcodeVersion}"
-    implementation "com.orhanobut:logger:${rootProject.ext.loggerVersion}"
-//    implementation 'com.google.code.gson:gson:2.8.2'
-    implementation 'org.greenrobot:eventbus:3.0.0'
-    implementation "io.reactivex.rxjava2:rxjava:${rootProject.ext.rxjavaVersion}"
-    implementation "io.reactivex.rxjava2:rxandroid:${rootProject.ext.rxandroidVersion}"
-    implementation 'com.tencent.bugly:crashreport:2.6.6.1'
-    implementation 'com.tencent.bugly:nativecrashreport:3.3.1'
-    // Test helpers for Room
-    testImplementation 'android.arch.persistence.room:testing:1.0.0'
-    // Room (use 1.1.0-alpha1 for latest alpha)
-    implementation 'android.arch.persistence.room:runtime:1.0.0'
-    annotationProcessor "android.arch.persistence.room:compiler:1.0.0"
-    // RxJava support for Room
-    implementation 'android.arch.persistence.room:rxjava2:1.0.0'
-    implementation "com.android.support:multidex:1.0.3"
-    implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibraryVersion}"
-    implementation "com.android.support:design:${rootProject.ext.supportLibraryVersion}"
-    implementation "com.android.support:recyclerview-v7:${rootProject.ext.supportLibraryVersion}"
     implementation project(path: ':location')
     implementation project(path: ':mockserver')
-
-
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-    androidTestImplementation 'com.android.support.test:runner:1.0.1'
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    annotationProcessor "com.google.dagger:dagger-compiler:${rootProject.ext.daggerVersion}"
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+    annotationProcessor "android.arch.persistence.room:compiler:1.0.0"
 
 }
 println("app end")
