--- a/build.gradle
+++ b/build.gradle
@@ -53,6 +53,7 @@ ext {
     kotlin_version = '1.2.71'
     loggerVersion = '2.1.1'
     utilcodeVersion = '1.11.1'
+    daggerVersion='2.15'
 
 }
 println("root project end")
