--- a/location/build.gradle
+++ b/location/build.gradle
@@ -41,15 +41,15 @@ android {
     }
 
 
+    sourceSets{
+        component{
+            java.srcDirs=['src/component/java']
+        }
+    }
 }
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibraryVersion}"
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    implementation "com.android.support:design:${rootProject.ext.supportLibraryVersion}"
-    testImplementation "junit:junit:${rootProject.ext.junitVersion}"
-    androidTestImplementation 'com.android.support.test:runner:1.0.1'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    api project(path: ':common')
 }
 println("lib location end")
